--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <img  class="header-image" src="./img/sarcasm-face.png" alt="Sarcastic Face">
         <div class="header-container">
             <h1>Sarcasm Formatter</h1>
         </div>
