minor bug fixes

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <main>
         <section class="user-input-container">
             <form>
-                <textarea id="user-input" onfocus="this.value=''">Insert the text you wish to format!</textarea>
+                <textarea id="user-input" placeholder="Insert the text you wish to format!"></textarea>
             </form>
             <form>
-                <textarea id="result" readonly>FoRmAtTeD ReSuLt</textarea>
+                <textarea id="result" placeholder="FoRmAtTeD ReSuLt" readonly></textarea>
             </form>
         </section>
         <section class="button-container">
